--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,39 +1,30 @@
-log4j.rootLogger=All, s2,s3, file1
+log4j.rootLogger=All,file1,s2
 
-#Redirect log messages to console
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target=System.out
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
-#
-##Redirect log messages to a log file, support file rolling
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.Threshold=ALL
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
+
 log4j.appender.file1=org.apache.log4j.RollingFileAppender
-log4j.appender.file1.File=D:\\webapp\\src\\main\\resources\\debug_log.txt
+log4j.appender.file1.File=D:\\iQube\\src\\main\\resources\\logs\\fatal_log.txt
 log4j.appender.file1.MaxFileSize=10MB
 log4j.appender.file1.MaxBackupIndex=10
-log4j.appender.file1.Threshold=WARN
-
+log4j.appender.file1.Threshold=FATAL
 log4j.appender.file1.layout=org.apache.log4j.PatternLayout
 log4j.appender.file1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
 
 
 
 log4j.appender.s2=org.apache.log4j.RollingFileAppender
-log4j.appender.s2.File=D:\\iQube\\src\\main\\resources\\warn_log.txt
+log4j.appender.s2.File=D:\\iQube\\src\\main\\resources\\logs\\warn_log.txt
 log4j.appender.s2.MaxFileSize=10MB
 log4j.appender.s2.MaxBackupIndex=10
-log4j.appender.s2.Threshold=OFF
+log4j.appender.s2.Threshold=WARN
 log4j.appender.s2.layout=org.apache.log4j.PatternLayout
 log4j.appender.s2Appender.s2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
 
 
-log4j.appender.s3=org.apache.log4j.RollingFileAppender
-log4j.appender.s3.File=D:\\iQube\\src\\main\\resources\\error_log.txt
-log4j.appender.s3.MaxFileSize=10MB
-log4j.appender.s3.MaxBackupIndex=10
-log4j.appender.s3.Threshold=ERROR
-log4j.appender.s3.layout=org.apache.log4j.PatternLayout
-log4j.appender.s3Appender.s2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
 
 
 
