--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,28 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+  <filter>
+    <filter-name>homeFilter</filter-name>
+    <filter-class>com.radical.iqube.controller.filters.HomeFilter</filter-class>
+  </filter>
+
   <servlet>
     <servlet-name>home</servlet-name>
-    <servlet-class>com.radical.iQube.controller.servlets.HomePageServlet</servlet-class>
-
+    <servlet-class>com.radical.iqube.controller.servlets.HomePageServlet</servlet-class>
   </servlet>
+
+
+  <filter-mapping>
+    <filter-name>homeFilter</filter-name>
+    <url-pattern>/home</url-pattern>
+  </filter-mapping>
+
   <servlet-mapping>
     <servlet-name>home</servlet-name>
-    <url-pattern>/</url-pattern>
+    <url-pattern>/home</url-pattern>
   </servlet-mapping>
+
 
 </web-app>
