--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=All,file1,s2
+log4j.rootLogger=file1,s2,sql
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -12,9 +12,7 @@ log4j.appender.file1.MaxFileSize=10MB
 log4j.appender.file1.MaxBackupIndex=10
 log4j.appender.file1.Threshold=FATAL
 log4j.appender.file1.layout=org.apache.log4j.PatternLayout
-log4j.appender.file1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
-
-
+log4j.appender.file1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n]
 
 log4j.appender.s2=org.apache.log4j.RollingFileAppender
 log4j.appender.s2.File=D:\\iQube\\src\\main\\resources\\logs\\warn_log.txt
@@ -23,6 +21,13 @@ log4j.appender.s2.MaxBackupIndex=10
 log4j.appender.s2.Threshold=WARN
 log4j.appender.s2.layout=org.apache.log4j.PatternLayout
 log4j.appender.s2Appender.s2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
+
+log4j.appender.sql=org.apache.log4j.RollingFileAppender
+log4j.appender.sql.File=D:\\iQube\\src\\main\\resources\\logs\\mysql_log.txt
+log4j.appender.sql.MaxFileSize=10MB
+log4j.appender.sql.MaxBackupIndex=10
+log4j.appender.sql.layout=org.apache.log4j.PatternLayout
+log4j.appender.sql.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
 
 
 
