--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 
   <resource-ref>
     <description>DB Connection</description>
-    <res-ref-name>jdbc/iqubedb</res-ref-name>
+    <res-ref-name>jdbc/iqubedbtest</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
