--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]: %m%n
 
 log4j.appender.file1=org.apache.log4j.RollingFileAppender
-log4j.appender.file1.File=D:\\iQube\\src\\main\\resources\\logs\\fatal_log.txt
+log4j.appender.file1.File=/home/alexandr/iQube/src/main/resources/fatal_log.txt
 log4j.appender.file1.MaxFileSize=10MB
 log4j.appender.file1.MaxBackupIndex=10
 log4j.appender.file1.Threshold=FATAL
@@ -17,7 +17,7 @@ log4j.appender.file1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t]:
 
 
 log4j.appender.s2=org.apache.log4j.RollingFileAppender
-log4j.appender.s2.File=D:\\iQube\\src\\main\\resources\\logs\\warn_log.txt
+log4j.appender.s2.File=/home/alexandr/iQube/src/main/resources/warn_log.txt
 log4j.appender.s2.MaxFileSize=10MB
 log4j.appender.s2.MaxBackupIndex=10
 log4j.appender.s2.Threshold=WARN
