--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,20 +6,82 @@
     <filter-class>com.radical.iqube.controller.filters.HomeFilter</filter-class>
   </filter>
 
+  <filter>
+    <filter-name>authFilter</filter-name>
+    <filter-class>com.radical.iqube.controller.filters.AuthFilter</filter-class>
+  </filter>
+
+  <filter>
+    <filter-name>registrationFilter</filter-name>
+    <filter-class>com.radical.iqube.controller.filters.RegistrationFilter</filter-class>
+  </filter>
+
+  <filter>
+    <filter-name>userPageFilter</filter-name>
+    <filter-class>com.radical.iqube.controller.filters.UserPageFilter</filter-class>
+  </filter>
+
   <servlet>
     <servlet-name>home</servlet-name>
     <servlet-class>com.radical.iqube.controller.servlets.HomePageServlet</servlet-class>
   </servlet>
+
+  <servlet>
+    <servlet-name>auth</servlet-name>
+    <servlet-class>com.radical.iqube.controller.servlets.AuthServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>registration</servlet-name>
+    <servlet-class>com.radical.iqube.controller.servlets.RegistrationServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>userPage</servlet-name>
+    <servlet-class>com.radical.iqube.controller.servlets.UserPageServlet</servlet-class>
+  </servlet>
+
 
   <filter-mapping>
     <filter-name>homeFilter</filter-name>
     <url-pattern>/home</url-pattern>
   </filter-mapping>
 
+  <filter-mapping>
+    <filter-name>authFilter</filter-name>
+    <url-pattern>/auth</url-pattern>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>registrationFilter</filter-name>
+    <url-pattern>/registration</url-pattern>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>userPageFilter</filter-name>
+    <url-pattern>/userPage</url-pattern>
+  </filter-mapping>
+
   <servlet-mapping>
     <servlet-name>home</servlet-name>
     <url-pattern>/home</url-pattern>
   </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>registration</servlet-name>
+    <url-pattern>/registration</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>auth</servlet-name>
+    <url-pattern>/auth</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>userPage</servlet-name>
+    <url-pattern>/userPage</url-pattern>
+  </servlet-mapping>
+
 
   <resource-ref>
     <description>DB Connection</description>
