--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -89,4 +89,23 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Pages requiring HTTPS</web-resource-name>
+      <url-pattern>/auth</url-pattern>
+      <url-pattern>/registration</url-pattern>
+      <url-pattern>/userPage</url-pattern>
+    </web-resource-collection>
+    <user-data-constraint>
+      <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+    </user-data-constraint>
+  </security-constraint>
+
+  <session-config>
+    <cookie-config>
+      <secure>`true`</secure>
+    </cookie-config>
+  </session-config>
+
 </web-app>
