--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -100,6 +100,7 @@
   <servlet-mapping>
     <servlet-name>music</servlet-name>
     <url-pattern>/music</url-pattern>
+<!--    <url-pattern>/artist</url-pattern>-->
   </servlet-mapping>
 
   <servlet-mapping>
